<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_10sdp"
    app:layout_constraintCircleRadius="@dimen/_10sdp"
    android:background="@drawable/hospital_adapter_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />


    <androidx.cardview.widget.CardView
        android:id="@+id/main_cardview"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/iv_maps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/map_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/ai_quedth"
        android:textSize="@dimen/_8sdp"
        android:textColor="@color/text_color5"
        app:layout_constraintStart_toEndOf="@id/main_cardview"
        app:layout_constraintEnd_toStartOf="@id/book_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:textSize="@dimen/_10sdp"
        android:text="@string/code"
        android:textColor="@color/text_color3"
        app:layout_constraintTop_toBottomOf="@id/tv_address"
        app:layout_constraintEnd_toStartOf="@id/book_btn"
        app:layout_constraintStart_toEndOf="@id/main_cardview" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name_arabic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textSize="@dimen/_10sdp"
        android:text="@string/code_arabic"
        android:textColor="@color/text_color3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/main_cardview"
        app:layout_constraintEnd_toStartOf="@id/book_btn"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/book_btn"
        style="@style/MaterialButton1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:text="@string/book"
        android:textColor="@color/text_color4"
        android:textSize="@dimen/_10sdp"
        android:textStyle="normal"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        tools:ignore="SpUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/call_btn"
        style="@style/MaterialButton1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/call"
        android:textColor="@color/text_color4"
        android:textSize="@dimen/_10sdp"
        android:textStyle="normal"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/book_btn"
        tools:ignore="SpUsage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/location_btn"
        style="@style/MaterialButton1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:text="@string/location"
        android:textColor="@color/text_color4"
        android:textSize="@dimen/_10sdp"
        android:textStyle="normal"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/call_btn"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>