<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_50sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_40sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/home_top_background"
            android:paddingTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/layout1"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                app:cardBackgroundColor="@color/black"
                android:layout_marginStart="@dimen/_16sdp"
                app:cardCornerRadius="@dimen/_40sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:scaleType="centerCrop"
                    tools:layout_editor_absoluteX="117dp"
                    tools:layout_editor_absoluteY="18dp"></ImageView>

            </androidx.cardview.widget.CardView>
            <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            app:layout_constraintStart_toEndOf="@+id/layout1"
            app:layout_constraintEnd_toStartOf="@id/layout2"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage"
                android:text="Bader Saud" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                app:layout_constraintVertical_bias="0.0"
                app:layout_goneMarginStart="@dimen/_2sdp"
                tools:ignore="SpUsage"
                android:text="35 Years, male" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/file"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_age"
                app:layout_constraintVertical_bias="0.0"
                app:layout_goneMarginStart="@dimen/_2sdp"
                tools:ignore="SpUsage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_file"
                app:layout_constraintVertical_bias="0.0"
                app:layout_goneMarginStart="@dimen/_2sdp"
                tools:ignore="SpUsage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_insurance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/insurance"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_id"
                app:layout_constraintVertical_bias="0.0"
                app:layout_goneMarginStart="@dimen/_2sdp"
                tools:ignore="SpUsage" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_id"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginTop="@dimen/_15sdp"
                    app:layout_goneMarginStart="@dimen/_2sdp"
                    tools:ignore="SpUsage" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_terms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_conditions"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/_9sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_id"
                    app:layout_constraintVertical_bias="0.0"
                    android:layout_marginTop="@dimen/_30sdp"
                    app:layout_goneMarginStart="@dimen/_2sdp"
                    tools:ignore="SpUsage" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logout"></ImageView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/guideLine1"
                    app:layout_constraintStart_toEndOf="@+id/layout1"
                    app:layout_constraintTop_toBottomOf="@+id/tv_id"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="SpUsage" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <SeekBar
            android:id="@+id/bmiSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:clickable="false"
            android:focusable="false"
            android:max="100"
            android:maxHeight="@dimen/_20sdp"
            android:minHeight="@dimen/_20sdp"
            android:progress="50"
            android:progressDrawable="@drawable/bmi"
            android:thumb="@drawable/seekbar_line"
            android:thumbTint="#388e3c"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBmi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bmiSeekBar"
            tools:ignore="SpUsage" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBmi"
            android:orientation="vertical"
            android:background="@drawable/background_profile">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_two"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/email_two"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:itemCount="6"
            tools:listitem="@layout/adapter_profile" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="@dimen/_16sdp"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout2"
            android:orientation="horizontal"
            android:background="@drawable/background_profile_two">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_gravity="center"
                android:text="@string/language_preferred"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                tools:ignore="SpUsage" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">
                <RadioButton
                    android:id="@+id/rb_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:button="@drawable/radio_button_background"
                    android:layoutDirection="rtl"
                    android:text="English"
                    android:textColor="@color/white"></RadioButton>

                <RadioButton
                    android:id="@+id/rb_arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:paddingStart="@dimen/_5sdp"
                    android:button="@drawable/radio_button_background"
                    android:layoutDirection="rtl"
                    android:text="عربي"
                    android:textColor="@color/white"></RadioButton>
            </RadioGroup>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:padding="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout3"
            android:orientation="vertical"
            android:background="@drawable/background_profile_three">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_insurance_two"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/insurance_two"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="SpUsage" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_class"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/class_two"
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_policy_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/policy_no"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_expiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/expiry"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:ignore="SpUsage" />

        </androidx.appcompat.widget.LinearLayoutCompat>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>